--- a/reper_front/app/src/main/res/layout/fragment_join.xml
+++ b/reper_front/app/src/main/res/layout/fragment_join.xml
@@ -22,6 +22,7 @@
             android:focusableInTouchMode="true">
 
             <TextView
+                android:id="@+id/fragmentJoinTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
@@ -34,6 +35,7 @@
 
             <!--아이디 입력 칸-->
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/fragmentJoinLinearLayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -89,6 +91,7 @@
 
             <!-- 비밀번호 입력 칸-->
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/fragmentJoinLinearLayout2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -148,10 +151,12 @@
 
             <!--이름 입력 칸-->
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/fragmentJoinLinearLayout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:orientation="vertical">
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -201,10 +206,12 @@
 
             <!--전화번호 입력 칸-->
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/fragmentJoinLinearLayout4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:orientation="vertical">
+
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -255,6 +262,7 @@
 
             <!--이용자구분 선택 칸 -->
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/fragmentJoinLinearLayout5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
@@ -320,6 +328,7 @@
 
 
             <TextView
+                android:id="@+id/FragmentJoinJoinBtnText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_regular"
