[feat] front - 기능 구현중

--- a/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
@@ -45,45 +45,48 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/steprecipe_fm_tv_index"
-            android:layout_width="100dp"
-            android:layout_height="52dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="-8dp"
-            android:background="@drawable/steprecipe_index"
-            android:fontFamily="@font/pretendard_semibold"
-            android:gravity="center"
-            android:text="매장 2잔"
-            android:textColor="@color/white"
-            android:textSize="16sp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/steprecipe_fm_rv_ingredients"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="32dp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/steprecipe_fm_btn_right"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_menu_name" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottieAnimationView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="350dp"
+            android:layout_height="350dp"
             android:layout_gravity="center"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="110dp"
+            android:layout_marginEnd="40dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_index"
+            app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_menu_name"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
             app:lottie_url="https://cdn.lottielab.com/l/6Y3CtYEieXZZrx.json" />
 
         <TextView
-            android:id="@+id/steprecipe_fm_tv_ingredient"
-            android:layout_width="wrap_content"
+            android:id="@+id/steprecipe_fm_tv_step"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:fontFamily="@font/pretendard_semibold"
+            android:breakStrategy="simple"
+            android:fontFamily="@font/pretendard_regular"
             android:text="레시피입니다. ^^"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
