--- a/reper_front/app/src/main/res/layout-land/fragment_step_recipe.xml
+++ b/reper_front/app/src/main/res/layout-land/fragment_step_recipe.xml
@@ -90,20 +90,29 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/steprecipe_fm_rv_ingredients"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toTopOf="@+id/steprecipe_fm_btn_right"
+                app:layout_constraintEnd_toEndOf="@+id/steprecipe_fm_land_tv_recipe"
+                app:layout_constraintStart_toStartOf="@+id/steprecipe_fm_land_tv_recipe"
+                app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_land_tv_recipe" />
+
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottieAnimationView"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="300dp"
+                android:layout_height="300dp"
                 android:layout_gravity="center"
-                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 app:layout_constraintBottom_toTopOf="@+id/textView2"
-                app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
-                app:layout_constraintStart_toEndOf="@+id/steprecipe_fm_btn_left"
+                app:layout_constraintEnd_toEndOf="@+id/steprecipe_fm_land_tv_recipe"
+                app:layout_constraintStart_toStartOf="@+id/steprecipe_fm_land_tv_recipe"
                 app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_land_tv_recipe"
                 app:lottie_autoPlay="true"
                 app:lottie_loop="true"
@@ -119,7 +128,7 @@
                 android:textColor="@color/lightgray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/steprecipe_fm_land_tv_user"
-                app:layout_constraintEnd_toStartOf="@+id/constraintLayout6"
+                app:layout_constraintEnd_toStartOf="@+id/steprecipe_fm_btn_right"
                 app:layout_constraintStart_toEndOf="@+id/steprecipe_fm_btn_left" />
 
             <TextView
