--- a/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_step_recipe.xml
@@ -47,7 +47,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/steprecipe_fm_rv_ingredients"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
@@ -74,7 +74,7 @@
             app:layout_constraintTop_toBottomOf="@+id/steprecipe_fm_tv_menu_name"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_url="https://cdn.lottielab.com/l/6Y3CtYEieXZZrx.json" />
+            app:lottie_url="https://cdn.lottielab.com/l/87fJhuooafErS0.json" />
 
         <TextView
             android:id="@+id/steprecipe_fm_tv_step"
