--- a/reper_front/app/src/main/res/layout/rv_home_order_item.xml
+++ b/reper_front/app/src/main/res/layout/rv_home_order_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
     android:layout_marginHorizontal="1dp"
-    android:background="@color/bgwhite"
+    android:backgroundTint="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp">
 
