[feat] (front) - fcm관련

--- a/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
@@ -115,6 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_marginBottom="8dp"
                     android:text="레시피를 업로드 중입니다..."
                     android:textSize="16sp" />
 
@@ -142,8 +143,7 @@
             android:scrollbarThumbVertical="@drawable/scroll_bar"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/uploadBar"
-            tools:layout_editor_absoluteX="32dp" />
+            app:layout_constraintTop_toBottomOf="@+id/uploadBar" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
