[feat] front - 정보 수정화면 수정완료, 마이페이지, 권한 요청 수정중
정보 수정화면 수정완료, 마이페이지, 권한 요청 수정중

마이페이지 매장수, spinner 수정해야함
권한 요청 성공적으로 되었음에도 Toast가 이상하게 뜸

--- a/reper_front/app/src/main/res/layout/fragment_edit_my_account.xml
+++ b/reper_front/app/src/main/res/layout/fragment_edit_my_account.xml
@@ -158,11 +158,29 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editmyaccount_fm_tv_myaccess">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/editmyaccount_fm_rv"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" />
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/editmyaccount_fm_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp" />
+
+                <TextView
+                    android:id="@+id/editmyaccount_fm_tv_no_stores"
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="매장 권한 없음"
+                    android:textColor="@color/darkgray"
+                    android:textSize="16sp"
+                    android:fontFamily="@font/pretendard_regular"
+                    android:visibility="gone"/>
+
+            </FrameLayout>
         </ScrollView>
 
         <FrameLayout
