--- a/reper_front/app/src/main/res/layout/fragment_my_page.xml
+++ b/reper_front/app/src/main/res/layout/fragment_my_page.xml
@@ -217,7 +217,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/pretendard_semibold"
                     android:text="공지내역"
-                    android:textColor="@color/black"
+                    android:textColor="@color/darkgray"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/imageView5"
                     app:layout_constraintStart_toStartOf="@+id/imageView5"
@@ -253,7 +253,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/pretendard_semibold"
                     android:text="레시피 보기"
-                    android:textColor="@color/black"
+                    android:textColor="@color/darkgray"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/imageView7"
                     app:layout_constraintStart_toStartOf="@+id/imageView7"
@@ -289,7 +289,7 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/pretendard_semibold"
                     android:text="정보 수정"
-                    android:textColor="@color/black"
+                    android:textColor="@color/darkgray"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/imageView8"
                     app:layout_constraintStart_toStartOf="@+id/imageView8"
