--- a/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
+++ b/reper_front/app/src/main/res/layout/fragment_all_recipe.xml
@@ -141,7 +141,7 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             android:fontFamily="@font/pretendard_regular"
-            android:text="해당하는 레시피가 없습니다."
+            android:text="레시피가 없습니다."
             android:textColor="@color/lightgray"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/allrecipe_fm_rv"
