--- a/reper_front/app/src/main/res/layout/dialog_inapp_login.xml
+++ b/reper_front/app/src/main/res/layout/dialog_inapp_login.xml
@@ -35,7 +35,7 @@
                     android:text="이미 "
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
@@ -43,15 +43,15 @@
                     android:text="회원가입한 "
                     android:textAlignment="center"
                     android:textColor="#F26547"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:fontFamily="@font/pretendard_semibold"
-                    android:text="이력이 있습니다."
+                    android:text="이력이있습니다."
                     android:textAlignment="center"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
@@ -62,10 +62,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/pretendard_semibold"
-                android:text="아이디/비밀번를 입력해주세요."
+                android:text="아이디/비밀번호를 입력해주세요."
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="20sp"/>
+                android:textSize="16sp" />
 
         </LinearLayout>
 
