--- a/reper_front/app/src/main/res/layout/item_noti.xml
+++ b/reper_front/app/src/main/res/layout/item_noti.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="6dp"
-    android:layout_marginLeft="1dp"
-    android:layout_marginRight="12dp"
+    android:layout_marginStart="1dp"
+    android:layout_marginEnd="8dp"
     android:background="@color/bgwhite"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp">
