--- a/reper_front/app/src/main/res/layout/rv_home_like_recipe_item.xml
+++ b/reper_front/app/src/main/res/layout/rv_home_like_recipe_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="120dp"
-    android:layout_height="130dp"
+    android:layout_height="140dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     android:layout_marginHorizontal="6dp"
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/pretendard_regular"
             android:text="아메리카노(Hot)"
             android:textSize="12sp"
@@ -24,16 +25,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/rv_home_like_recipe_img"
-            android:src="@drawable/americano_hot"
-            android:scaleType="centerCrop"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/rv_home_like_recipe_card"
             android:layout_width="80dp"
-            android:layout_height="70dp"
+            android:layout_height="80dp"
+            android:layout_marginBottom="16dp"
+            app:cardCornerRadius="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rv_home_like_recipe_text" />
+            app:layout_constraintTop_toBottomOf="@+id/rv_home_like_recipe_text">
+
+            <ImageView
+                android:id="@+id/rv_home_like_recipe_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/americano_hot"
+                android:clipToOutline="true"/>
+        </androidx.cardview.widget.CardView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
