--- a/reper_front/app/src/main/res/values/colors.xml
+++ b/reper_front/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="maingreen">#558948</color>
     <color name="darkgreen">#1C4700</color>
     <color name="lightgreen">#6AB65D</color>
+    <color name="morelightgreengray">#33558948</color>
     <color name="lightorange">#ED9049</color>
     <color name="mainorange">#F26547</color>
     <color name="bgwhite">#FCFCFC</color>
