--- a/reper_front/app/src/main/res/layout-land/fragment_step_recipe.xml
+++ b/reper_front/app/src/main/res/layout-land/fragment_step_recipe.xml
@@ -105,10 +105,10 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/lottieAnimationView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
                 android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
+                android:scaleType="centerInside"
                 app:layout_constraintBottom_toTopOf="@+id/steprecipe_fm_btn_right"
                 app:layout_constraintEnd_toEndOf="@+id/steprecipe_fm_land_tv_recipe"
                 app:layout_constraintStart_toStartOf="@+id/steprecipe_fm_land_tv_recipe"
@@ -205,11 +205,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/steprecipe_fm_land_rv"
+            android:id="@+id/steprecipe_fm_land_rv_why"
             android:layout_width="200dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
