--- a/reper_front/app/src/main/res/layout/fragment_boss.xml
+++ b/reper_front/app/src/main/res/layout/fragment_boss.xml
@@ -182,6 +182,13 @@
 
         </androidx.cardview.widget.CardView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/boss_fg_store_add"
+            android:orientation="vertical"
+            >
+
         <TextView
             android:id="@+id/access"
             android:layout_width="match_parent"
@@ -190,8 +197,7 @@
             android:fontFamily="@font/pretendard_semibold"
             android:text="권한 요청 내역"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/boss_fg_store_add" />
+           />
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -201,9 +207,23 @@
             android:layout_marginTop="28dp"
             android:scrollbarFadeDuration="0"
             android:scrollbarThumbVertical="@drawable/scroll_bar"
-            android:scrollbars="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/access" />
+            android:scrollbars="vertical" />
+
+        <FrameLayout
+            android:layout_marginTop="28dp"
+            android:id="@+id/nothing_request"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:textColor="@color/lightgray"
+                android:fontFamily="@font/pretendard_regular"
+                android:text="권한 요청이 없습니다."
+                android:textSize="16sp"
+                android:gravity="center"/>
+        </FrameLayout>
 
         <TextView
             android:id="@+id/store_employee"
@@ -212,9 +232,7 @@
             android:layout_marginTop="32dp"
             android:fontFamily="@font/pretendard_semibold"
             android:text="우리 가게 직원"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/access_false_list" />
+            android:textSize="18sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/employee_list"
@@ -224,8 +242,26 @@
             android:scrollbarFadeDuration="0"
             android:scrollbarThumbVertical="@drawable/scroll_bar"
             android:scrollbars="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_employee" />
+             />
+
+
+        <FrameLayout
+            android:id="@+id/nothing_employee"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="20dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:text="등록된 직원이 없습니다."
+                android:textColor="@color/lightgray"
+                android:fontFamily="@font/pretendard_regular"
+                android:gravity="center"
+                android:textSize="16sp"
+                />
+        </FrameLayout>
+
+        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
