--- a/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
@@ -83,12 +83,11 @@
             android:id="@+id/uploadBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             android:layout_marginTop="24dp"
             android:background="@drawable/store_list_item"
             app:cardCornerRadius="12dp"
             android:layout_marginHorizontal="2dp"
-
-            app:cardElevation="4dp"
             app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti">
 
             <!-- LinearLayout 추가 -->
@@ -146,9 +145,11 @@
             app:layout_constraintTop_toBottomOf="@+id/uploadBar" />
 
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
+            android:id="@+id/nothing_recipe"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:backgroundTint="@color/bgwhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/uploadBar">
             <TextView
@@ -160,7 +161,7 @@
                 android:text="등록된 레시피가 없습니다."
                 android:layout_gravity="center"/>
 
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
