--- a/reper_front/app/src/main/res/layout/fragment_store_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_store_manage.xml
@@ -63,7 +63,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:layout_editor_absoluteX="32dp" />
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:id="@+id/nothing_store"
             android:layout_width="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
                 android:textSize="18sp"
                 android:layout_gravity="center"
                 />
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
