--- a/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
+++ b/reper_front/app/src/main/res/layout/fragment_recipe_manage.xml
@@ -87,6 +87,7 @@
             android:layout_marginTop="24dp"
             android:background="@drawable/store_list_item"
             app:cardCornerRadius="12dp"
+            android:visibility="gone"
             android:layout_marginHorizontal="2dp"
             app:layout_constraintTop_toBottomOf="@+id/recipe_fg_search_noti">
 
