[feat] front - viewPager, SlideUp 제스처 설정
viewPager랑 SlideUp 제스처가 겹쳐서, slideUpPannel이 잘 안 열리는 문제가 있었다.
해결 방법. umanoShadowHeight를 만들고, Overlay true 설정, 마지막으로 kt 파일에서 제스처를 직접 제어.

--- a/reper_front/app/src/main/res/layout/fragment_full_recipe_item.xml
+++ b/reper_front/app/src/main/res/layout/fragment_full_recipe_item.xml
@@ -12,7 +12,9 @@
         android:layout_height="match_parent"
         android:gravity="bottom"
         app:umanoDragView="@id/fullrecipe_fm_slide_layout"
-        app:umanoPanelHeight="450dp">
+        app:umanoOverlay="true"
+        app:umanoPanelHeight="450dp"
+        app:umanoShadowHeight="12dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/fullrecipe_fm_back_layout"
