--- a/reper_front/app/src/main/res/layout/fragment_order.xml
+++ b/reper_front/app/src/main/res/layout/fragment_order.xml
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/tv_jumunneyeok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="주문 내역📝"
@@ -52,6 +53,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical"
+        android:layoutAnimation="@anim/layout_animation_fall_down"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
