--- a/reper_front/app/src/main/res/layout/dialog_delete_acccess.xml
+++ b/reper_front/app/src/main/res/layout/dialog_delete_acccess.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="330dp"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@drawable/dialog_delete"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="25dp">
+    <LinearLayout
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -24,6 +29,7 @@
         android:textSize="20sp"
         android:ellipsize="end"
         android:singleLine="true"
+        android:textColor="@color/fontblack"
         android:fontFamily="@font/pretendard_semibold"/>
 
         <TextView
@@ -31,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="에서"
+            android:textColor="@color/fontblack"
             android:textSize="20sp"
             android:layout_gravity="center"
             android:singleLine="true"
@@ -45,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="님의 권한을 "
+        android:textColor="@color/fontblack"
         android:textSize="20sp"
         android:layout_gravity="center"
         android:singleLine="true"
@@ -77,6 +85,7 @@
             android:background="@drawable/org_btn"
             android:layout_marginRight="32dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/bgwhite"
             android:fontFamily="@font/pretendard_bold"
             />
@@ -84,4 +93,6 @@
     </LinearLayout>
 
 
-</LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
